# c3d

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  c3d.c  c3d.h  c3d_bench.c  c3d_bench_par.c  c3d_compact.c  c3d_inspect.c  c3d_labels_codec.c  c3d_labels_inspect.c  c3d_perf.c  c3d_progressive.c  c3d_test.c  c3d_train.c  c3d_train_dz.c  c3d_zarr_to_c3d.py  fetch_corpus.py  lsan.supp
bench/: summary_64chunk_all_codecs.txt  summary_64chunk_final.txt
cmake/: c3d-config.cmake.in  c3d.pc.in
